alignment issues solved

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -37,14 +37,22 @@ body {
 }
 
 .navbar-toggle {
+	margin-top: 8px;
 	border: none;
-	font-size: 18px;
+	font-size: 26px;
 	margin-right: none;
 	color: #FFFFFF;
 }
 
+.navbar-brand {
+	margin-top: 8px;
+	border: none;
+	margin-right: none;
+	font-size: 26px;
+}
+
 .holder {
-  padding-top: 75px;
+  padding-top: 85px;
 }
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
